# DataWorkbench

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
.github/workflows/: cd.yml  ci.yml  python-app.yml
docs/: usage.md
samples/: write_to_dwb.py
src/dataworkbench/: __init__.py  auth.py  datacatalogue.py  gateway.py  log.py  mms.py  storage.py  utils.py
tests/: conftest.py  test_auth.py  test_datacatalogue.py  test_gateway.py  test_storage.py  test_utils.py
workflows/: write_to_dwb.py
